--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -9,21 +9,25 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
+jobs: 
+runs-on: ubuntu-latest
   build:
+  strategy:
+    matrix:
+      node-version: [16.x]
+      # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+  steps:
+    - uses: jirutka/setup-alpine@v1
+      with:
+        branch: v3.15
 
-    runs-on: ubuntu-latest
+    - run: cat /etc/alpine-release
+      shell: alpine.sh {0}
 
-    strategy:
-      matrix:
-        node-version: [16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
-    steps:
-      - name: Use oxr463/setup-cordova
-        uses: oxr463/setup-cordova@0.0.3
-        with:
-          exec: |
-            cordova platform add android && \
-            cordova build --no-telemetry && \
-            cp "$(find . -name '*.apk')" .
+    - name: Use oxr463/setup-cordova
+      uses: oxr463/setup-cordova@0.0.3
+      with:
+        exec: |
+          cordova platform add android && \
+          cordova build --no-telemetry && \
+          cp "$(find . -name '*.apk')" .
